--- a/semestralka/package.json
+++ b/semestralka/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "core-js": "^3.6.4",
     "vue": "^2.6.11"
   },
